syntax = "proto3";

package greet;

message Greeting {
	string	first_name = 1;
	string	last_name = 2;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}

message GreetingManyTimesRequest {
	Greeting greeting = 1;
}

message GreetingManyTimesResponse {
	string result = 1;
}

message LongGreetingRequest {
	Greeting greeting = 1;
}

message LongGreetingResponse {
	string result = 1;
}

message GreetEveryoneRequest {
	Greeting greeting = 1;
}

message GreetEveryoneResponse {
	string result = 1;
}

message GreetDeadlineRequest {
	string name = 1;
}

message GreetDeadlineResponse {
	string result = 1;
}

service GreetingService {
	//Unary
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}

	//Server streaming
	rpc GreetManyTimes (GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse) {}

	//Client streaming
	rpc LongGreet (stream LongGreetingRequest) returns (LongGreetingResponse) {}

	rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}

	rpc GreetDeadline (GreetDeadlineRequest) returns (GreetDeadlineResponse) {}
}	